[package]
name = "cross-net"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.187"
regex = "1.12.4"
subnetwork = "0.6.7"
thiserror = "2.0.18"

[target.'cfg(target_os = "linux")'.dependencies]
futures = "0.3.32"
rtnetlink = "0.21.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis"] }

[features]
default = ["debug"]
debug = []
